fix extra padding on top of an article

--- a/styles/[article_slug].module.css
+++ b/styles/[article_slug].module.css
@@ -18,6 +18,9 @@
 }
 
 @media screen and (max-width: 1220px) {
+	#main {
+		padding-top: 1rem;
+	}
 	#infoBar {
 		display: block;
 	}
@@ -58,7 +61,9 @@
 @media screen and (max-width: 840px) {
 	#main {
 		width: 90vw;
+		padding-top: 0.5rem;
 	}
+
 	#title {
 		/* margin: 1rem 0; */
 		font-size: var(--medium-text);
